# Takezo7

./: Anchor.toml  Cargo.toml  README.md  package-lock.json
.cache/solana/v1.32/sbf-tools/: version.md
.cache/solana/v1.32/sbf-tools/rust/lib/rustlib/sbf-solana-solana/lib/: libcfg_if-1aca0cd7fb5b1fe7.rlib  libcompiler_builtins-efcf27b41ab5086f.rlib  libgetopts-13be0724c2262472.rlib  libhashbrown-b39241ad5157b7f1.rlib  liblibc-244176a4f0eb5258.rlib  libmemchr-435540adcb99b200.rlib  libpanic_abort-d054c77f93301807.rlib  libpanic_unwind-5e600690402862f1.rlib  libproc_macro-fa383848e637a599.rlib  librustc_std_workspace_alloc-eda70ff02a4f79ab.rlib  librustc_std_workspace_core-0035e9e92ee45610.rlib  librustc_std_workspace_std-451d3e61a454eff5.rlib  libstd_detect-10d697ea3bdf14e4.rlib  libtest-02804fa480c4575f.rlib  libunicode_width-4bff02f379da6a8e.rlib  libunwind-5672a09ddfe6f4a4.rlib
.cache/solana/v1.32/sbf-tools/rust/lib/rustlib/x86_64-pc-windows-msvc/lib/: libaddr2line-3a95b0170b85719a.rlib  libadler-cd48c9f3b8548177.rlib  libcfg_if-74e7bc47568ac30f.rlib  libcompiler_builtins-4a9e6b6f1c1f0f51.rlib  libgetopts-546be763f4e51260.rlib  libhashbrown-3ceda5fbaa3d4526.rlib  liblibc-71cb898937dee9b4.rlib  libmemchr-40551f1df12c7cb9.rlib  libminiz_oxide-add98ff414692a05.rlib  libpanic_abort-47774e6008ea7d5b.rlib  (+10 more)
Takezo7/: index.js  lib.rs
Wallet/.config/solana/: Seller.json
metamask-login/: package-lock.json  package.json
metamask-login/src/: App.css  App.js  WalletCard.js
programs/takezo7/: Cargo.toml
programs/takezo7/src/: lib.rs
src/: lib.rs
tests/: takezo7.ts
