[workspace]
members = [
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[package]
name = "takezo7"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "takezo7"

[features]
no-entrypoint = []

no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.15.2"

[dev-dependencies]
solana-program-test = "=1.15.2"
solana-sdk = "=1.15.2"

